--- a/mooc/cs231n:convolutional neural networks for visual recognition/assignment3/RNN_Captioning.ipynb
+++ b/mooc/cs231n:convolutional neural networks for visual recognition/assignment3/RNN_Captioning.ipynb
@@ -493,9 +493,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dW error:  3.2774595693100364e-12\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "\n",
@@ -525,11 +533,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx error:  2.9215854231394017e-10\n",
+      "dw error:  1.5772169135951167e-10\n",
+      "db error:  3.252200556967514e-11\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "\n",
@@ -576,11 +594,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3027781774290146\n",
+      "23.025985953127226\n",
+      "2.2643611790293394\n",
+      "dx error:  2.583585303524283e-08\n"
+     ]
+    }
+   ],
    "source": [
     "# Sanity check for temporal softmax loss\n",
     "from cs231n.rnn_layers import temporal_softmax_loss\n",
@@ -623,11 +652,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss:  0.0\n",
+      "expected loss:  9.83235591003\n",
+      "difference:  9.83235591003\n"
+     ]
+    }
+   ],
    "source": [
     "N, D, W, H = 10, 20, 30, 40\n",
     "word_to_idx = {'<NULL>': 0, 'cat': 2, 'dog': 3}\n",
